<resources>
    <string name="app_name">semestralnaPraca_idleGame_Tibor_Michalov</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="idle_game_text">Idle game</string>
    <string name="level_text">level: </string>
    <string name="gold_text">Gold: </string>
    <string name="legacy_text">Legacy:</string>
    <string name="fight_text">Fight!</string>
    <string name="blacksmith_text">Blacksmith</string>
    <string name="units_text">Units</string>
    <string name="legacy_button_text">legacy</string>
    <string name="settings_button_text">settings</string>
    <string name="fight_menu_boss_health">Health:</string>
    <string name="tempboss">Tempboss</string>
    <string name="back_button_shared">back</string>
    <string name="quit_button">quit game</string>
    <string name="settings_text">Settings</string>
    <string name="settings_master_volume">Master volume</string>
    <string name="settings_music_volume">Music volume</string>
    <string name="settings_effects_volume">Effects volume</string>
    <string name="restart_game">Restart game?</string>
    <string name="wizards_staff">Wizard\'s staff +</string>
    <string name="archers_bow">Archer\'s bow +</string>
    <string name="knights_sword">Knight\'s sword +</string>
    <string name="mystics_wand">Mystic\'s wand +</string>
    <string name="mystic_level">Mystic level:</string>
    <string name="wizard_level">Wizard level:</string>
    <string name="archer_level">Archer level:</string>
    <string name="knight_level">Knight level:</string>

</resources>