<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.SemestralnaPraca_idleGame_Tibor_Michalov.FullscreenContainer"
    tools:context=".main_menu">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B36800"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/main_menu_guideline_horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.28" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/main_menu_guideline_horizontal_middle_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/main_menu_guideline_horizontal_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/main_menu_guideline_horizontal_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.99" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/main_menu_guideline_vertical_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/main_menu_guideline_vertical_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <TextView
            android:id="@+id/main_menu_idle_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idle_game_text"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="@id/main_menu_guideline_vertical_right"
            app:layout_constraintLeft_toLeftOf="@id/main_menu_guideline_vertical_left"
            app:layout_constraintBottom_toTopOf="@id/main_menu_guideline_horizontal_top"
            />

        <View
            android:id="@+id/main_menu_view_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#5C2402"
            app:layout_constraintBottom_toTopOf="@+id/main_menu_guideline_horizontal_middle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@id/main_menu_guideline_vertical_left"
            app:layout_constraintRight_toRightOf="@id/main_menu_guideline_vertical_right"

            app:layout_constraintTop_toBottomOf="@id/main_menu_guideline_horizontal_top"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/main_menu_view_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#5C2402"
            app:layout_constraintBottom_toTopOf="@id/main_menu_guideline_horizontal_bottom"
            app:layout_constraintLeft_toLeftOf="@id/main_menu_guideline_vertical_left"
            app:layout_constraintRight_toRightOf="@id/main_menu_guideline_vertical_right"
            app:layout_constraintTop_toBottomOf="@id/main_menu_guideline_horizontal_middle_2"

            />

        <TextView
            android:id="@+id/main_menu_level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/level_text"
            app:layout_constraintTop_toBottomOf="@id/main_menu_guideline_horizontal_top"
            app:layout_constraintRight_toLeftOf="@id/main_menu_guideline_vertical_right"
            app:layout_constraintLeft_toLeftOf="@id/main_menu_guideline_vertical_left"
            app:layout_constraintBottom_toTopOf="@id/main_menu_gold_text"
            app:layout_constraintHorizontal_bias="0.1"


            />

        <TextView
            android:id="@+id/main_menu_gold_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#FEFE01"
            android:text="@string/gold_text"
            app:layout_constraintTop_toBottomOf="@id/main_menu_level_text"
            app:layout_constraintRight_toRightOf="@id/main_menu_guideline_vertical_right"
            app:layout_constraintLeft_toLeftOf="@id/main_menu_guideline_vertical_left"
            app:layout_constraintBottom_toTopOf="@id/main_menu_legacy_text"
            app:layout_constraintHorizontal_bias="0.1"

            />

        <TextView
            android:id="@+id/main_menu_legacy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#4EFE01"
            android:text="@string/legacy_text"
            app:layout_constraintTop_toBottomOf="@id/main_menu_gold_text"
            app:layout_constraintRight_toRightOf="@id/main_menu_guideline_vertical_right"
            app:layout_constraintLeft_toLeftOf="@id/main_menu_guideline_vertical_left"
            app:layout_constraintBottom_toTopOf="@id/main_menu_guideline_horizontal_middle"
            app:layout_constraintHorizontal_bias="0.1"

            />


        <Button
            android:id="@+id/main_menu_fight_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fight_text"
            android:backgroundTint="#E21030"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintWidth_percent="0.55"


            app:layout_constraintTop_toBottomOf="@id/main_menu_guideline_horizontal_middle_2"
            app:layout_constraintLeft_toRightOf="@id/main_menu_guideline_vertical_left"
            app:layout_constraintRight_toLeftOf="@id/main_menu_guideline_vertical_right"
            app:layout_constraintBottom_toTopOf="@id/main_menu_blacksmith_button"
            />

        <Button
            android:id="@+id/main_menu_blacksmith_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/blacksmith_text"
            android:backgroundTint="#127891"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintWidth_percent="0.55"

            app:layout_constraintTop_toBottomOf="@id/main_menu_fight_button"
            app:layout_constraintLeft_toRightOf="@id/main_menu_guideline_vertical_left"
            app:layout_constraintRight_toLeftOf="@id/main_menu_guideline_vertical_right"
            app:layout_constraintBottom_toTopOf="@id/main_menu_units_button"
            />
        <Button
            android:id="@+id/main_menu_units_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/units_text"
            android:backgroundTint="#966304"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintWidth_percent="0.55"

            app:layout_constraintTop_toBottomOf="@id/main_menu_blacksmith_button"
            app:layout_constraintLeft_toRightOf="@id/main_menu_guideline_vertical_left"
            app:layout_constraintRight_toLeftOf="@id/main_menu_guideline_vertical_right"
            app:layout_constraintBottom_toTopOf="@id/main_menu_legacy_button"
            />
        <Button
            android:id="@+id/main_menu_legacy_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/legacy_button_text"
            android:backgroundTint="#F8F804"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintWidth_percent="0.55"

            app:layout_constraintTop_toBottomOf="@id/main_menu_units_button"
            app:layout_constraintLeft_toRightOf="@id/main_menu_guideline_vertical_left"
            app:layout_constraintRight_toLeftOf="@id/main_menu_guideline_vertical_right"
            app:layout_constraintBottom_toTopOf="@id/main_menu_settings_button"
            />
        <Button
            android:id="@+id/main_menu_settings_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_button_text"
            android:backgroundTint="#696262"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintWidth_percent="0.55"

            app:layout_constraintTop_toBottomOf="@id/main_menu_legacy_button"
            app:layout_constraintLeft_toRightOf="@id/main_menu_guideline_vertical_left"
            app:layout_constraintRight_toLeftOf="@id/main_menu_guideline_vertical_right"
            app:layout_constraintBottom_toTopOf="@id/main_menu_guideline_horizontal_bottom"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>