<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.SemestralnaPraca_idleGame_Tibor_Michalov.FullscreenContainer"
    tools:context=".blacksmith_menu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B36800"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/blacksmith_menu_guideline_horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.23"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/blacksmith_menu_guideline_horizontal_middle_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/blacksmith_menu_guideline_horizontal_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/blacksmith_menu_guideline_horizontal_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.97" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/blacksmith_menu_guideline_vertical_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/blacksmith_menu_guideline_vertical_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <TextView
            android:id="@+id/blacksmith_menu_idle_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blacksmith_text"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="@id/blacksmith_menu_guideline_vertical_right"
            app:layout_constraintLeft_toLeftOf="@id/blacksmith_menu_guideline_vertical_left"
            app:layout_constraintBottom_toTopOf="@id/blacksmith_menu_guideline_horizontal_top"
            />

        <View
            android:id="@+id/blacksmith_menu_view_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#5C2402"
            app:layout_constraintBottom_toTopOf="@+id/blacksmith_menu_guideline_horizontal_middle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@id/blacksmith_menu_guideline_vertical_left"
            app:layout_constraintRight_toRightOf="@id/blacksmith_menu_guideline_vertical_right"

            app:layout_constraintTop_toBottomOf="@id/blacksmith_menu_guideline_horizontal_top"
            app:layout_constraintVertical_bias="0.0" />

        <ScrollView
            android:id="@+id/blacksmith_menu_view_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#5C2402"
            app:layout_constraintBottom_toTopOf="@id/blacksmith_menu_guideline_horizontal_bottom"
            app:layout_constraintLeft_toLeftOf="@id/blacksmith_menu_guideline_vertical_left"
            app:layout_constraintRight_toRightOf="@id/blacksmith_menu_guideline_vertical_right"
            app:layout_constraintTop_toBottomOf="@id/blacksmith_menu_guideline_horizontal_middle_2"
            />

        <Button
            android:id="@+id/blacksmith_menu_back_button"
            android:text="@string/back_button_shared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />
        <TextView
            android:id="@+id/main_menu_gold_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#FEFE01"
            android:text="@string/gold_text"
            app:layout_constraintTop_toBottomOf="@id/blacksmith_menu_guideline_horizontal_top"
            app:layout_constraintRight_toRightOf="@id/blacksmith_menu_guideline_vertical_right"
            app:layout_constraintLeft_toLeftOf="@id/blacksmith_menu_guideline_vertical_left"
            app:layout_constraintBottom_toTopOf="@id/blacksmith_menu_guideline_horizontal_middle"
            app:layout_constraintHorizontal_bias="0.1"

            />

        <Button
            android:id="@+id/blacksmith_upgrade_wizard_weapon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wizards_staff"
            android:backgroundTint="#E21030"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintWidth_percent="0.70"

            app:layout_constraintTop_toBottomOf="@id/blacksmith_menu_guideline_horizontal_middle_2"
            app:layout_constraintLeft_toRightOf="@id/blacksmith_menu_guideline_vertical_left"
            app:layout_constraintRight_toLeftOf="@id/blacksmith_menu_guideline_vertical_right"
            app:layout_constraintBottom_toTopOf="@id/blacksmith_upgrade_mystic_weapon"
            />
        <Button
            android:id="@+id/blacksmith_upgrade_mystic_weapon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mystics_wand"
            android:backgroundTint="#E21030"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintWidth_percent="0.70"

            app:layout_constraintTop_toBottomOf="@id/blacksmith_upgrade_wizard_weapon"
            app:layout_constraintLeft_toRightOf="@id/blacksmith_menu_guideline_vertical_left"
            app:layout_constraintRight_toLeftOf="@id/blacksmith_menu_guideline_vertical_right"
            app:layout_constraintBottom_toTopOf="@id/blacksmith_upgrade_archer_weapon"
            />
        <Button
            android:id="@+id/blacksmith_upgrade_archer_weapon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/archers_bow"
            android:backgroundTint="#E21030"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintWidth_percent="0.70"

            app:layout_constraintTop_toBottomOf="@id/blacksmith_upgrade_mystic_weapon"
            app:layout_constraintLeft_toRightOf="@id/blacksmith_menu_guideline_vertical_left"
            app:layout_constraintRight_toLeftOf="@id/blacksmith_menu_guideline_vertical_right"
            app:layout_constraintBottom_toTopOf="@id/blacksmith_upgrade_knight_weapon"
            />
        <Button
            android:id="@+id/blacksmith_upgrade_knight_weapon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/knights_sword"
            android:backgroundTint="#E21030"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintWidth_percent="0.70"

            app:layout_constraintTop_toBottomOf="@id/blacksmith_upgrade_archer_weapon"
            app:layout_constraintLeft_toRightOf="@id/blacksmith_menu_guideline_vertical_left"
            app:layout_constraintRight_toLeftOf="@id/blacksmith_menu_guideline_vertical_right"
            app:layout_constraintBottom_toTopOf="@id/blacksmith_menu_guideline_horizontal_bottom"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>